# colordance

./: .gitignore  LICENSE  README.md  format.sh
arduino/: .gitignore  .gitrepo  Makefile  compile_commands.json
arduino/full/: DirectLightController.hpp  DirectParamController.hpp  Makefile  main.cpp  main.hpp
arduino/libraries/Bounce2/: .gitrepo
arduino/libraries/TeensyDMX/: .gitrepo
arduino/libraries/TeensyDMX/src/: Sender.cpp
arduino/mini/: Makefile  MiniParamController.cpp  MiniParamController.hpp  WS2812MatrixLightController.cpp  WS2812MatrixLightController.hpp  main.cpp  main.hpp
arduino/mini/FastLED/: .gitrepo
arduino/src/: DirectLightController.cpp  DirectLightController.hpp  DirectParamController.cpp  DirectParamController.hpp  main.cpp  main.hpp
simulator/: CMakeLists.txt  README.md
simulator/src/: CMakeLists.txt  Simulator.cpp
src/: CMakeLists.txt  compile_commands.json  format.sh
src/cmake/: Findlibftdi.cmake
src/color/: CMakeLists.txt  Color.cpp  Color.hpp
src/color/test/: colortest.cpp
src/controller/: BounceEffect.cpp  BounceEffect.hpp  CMakeLists.txt  ChromaticAberrationEffect.cpp  ChromaticAberrationEffect.hpp  CircleStrobeEffect.cpp  CircleStrobeEffect.hpp  ColorShiftAndStrobeEffect.cpp  ColorShiftAndStrobeEffect.hpp  ColorShiftEffect.cpp  ColorShiftEffect.hpp  DummyParamController.cpp  DummyParamController.hpp  Effect.cpp  Effect.hpp  LightController.cpp  LightController.hpp  ParamController.cpp  ParamController.hpp  RingEffect.cpp  RingEffect.hpp  SleepEffect.cpp  SleepEffect.hpp  SolidColorEffect.cpp  SolidColorEffect.hpp  SquareEffect.cpp  SquareEffect.hpp  SquareStrobeEffect.cpp  SquareStrobeEffect.hpp  StrobeEffect.cpp  StrobeEffect.hpp  ThreeColorEffect.cpp  ThreeColorEffect.hpp  UnevenSwitchStrobeEffect.cpp  UnevenSwitchStrobeEffect.hpp
src/controller/test/: DummyLightController.cpp  DummyLightController.hpp  LightControllerTest.cpp  ParamControllerTest.cpp  SolidColorEffectTest.cpp
src/local/: CMakeLists.txt  Local.cpp  LocalLightController.cpp  LocalLightController.hpp  LocalParamController.cpp  LocalParamController.hpp  data
src/simulator/: CMakeLists.txt  Simulator.cpp  Simulator.hpp  SimulatorLightController.cpp  SimulatorLightController.hpp
